[package]
name    = "oxc_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"

[dependencies]
oxc_allocator = { path = "../crates/oxc_allocator" }
oxc_parser = { path = "../crates/oxc_parser" }
oxc_span = { path = "../crates/oxc_span" }
libfuzzer-sys = "0.4.7"
