[package]
name = "oxfmt"
version = "0.21.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "oxfmt"
path = "src/main.rs"
test = false
doctest = false

[dependencies]
oxc_allocator = { workspace = true, features = ["pool"] }
oxc_data_structures = { workspace = true, features = ["rope"] }
oxc_diagnostics = { workspace = true }
oxc_formatter = { workspace = true }
oxc_language_server = { workspace = true }
oxc_napi = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }

bpaf = { workspace = true, features = ["autocomplete", "bright-color", "derive"] }
cow-utils = { workspace = true }
editorconfig-parser = { workspace = true }
ignore = { workspace = true, features = ["simd-accel"] }
json-strip-comments = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simdutf8 = { workspace = true }
sort-package-json = { workspace = true }
oxc-toml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [] } # Omit the `regex` feature
tower-lsp-server = { workspace = true, features = ["proposed"] }

# NAPI dependencies (conditional on napi feature)
napi = { workspace = true, features = ["async", "serde-json"], optional = true }
napi-derive = { workspace = true, optional = true }

[build-dependencies]
napi-build = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[target.'cfg(not(any(target_os = "linux", target_os = "freebsd", target_arch = "arm", target_family = "wasm")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit"] }

[target.'cfg(all(target_os = "linux", not(target_arch = "arm"), not(target_arch = "aarch64")))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
] }

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = [
  "skip_collect_on_exit",
  "local_dynamic_tls",
  "no_opt_arch",
] }

[features]
default = ["napi"]
napi = ["dep:napi", "dep:napi-derive"]
allocator = ["dep:mimalloc-safe"]
detect_code_removal = ["oxc_formatter/detect_code_removal"]

[package.metadata.cargo-shear]
ignored-paths = ["test/fixtures/extensions/_test.rs"]
